cds-kube-prometheus/ingress/alarmmanager-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: alarm
   namespace: monitoring
   annotations:
     kubernetes.io/ingress.class: nginx
spec:
   rules:
   - host: k8s.alarm
     http:
       paths:
       - backend:
           service:
             name: alertmanager-operated
             port:
               number: 9093
         path: /
         pathType: ImplementationSpecific

   tls:
     - hosts:
         - k8s.alarm
       secretName: monitoring-certs
