cds-kube-prometheus/ingress/prometheus-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
   name: prometheus
   namespace: monitoring
   annotations:
     kubernetes.io/ingress.class: nginx
spec:
   rules:
   - host: k8s.prometheus
     http:
       paths:
       - path: 
         backend:
          serviceName: prometheus-k8s
          servicePort: 9090
   tls:
     - hosts:
         - k8s.prometheus
       secretName: monitoring-certs
